--- a/docs/modules/ROOT/pages/amazon-dynamodb.adoc
+++ b/docs/modules/ROOT/pages/amazon-dynamodb.adoc
@@ -11,7 +11,8 @@ NOTE: The DynamoDB extension is based on https://docs.aws.amazon.com/sdk-for-jav
 It's a major rewrite of the 1.x code base that offers two programming models (Blocking & Async).
 Keep in mind it's actively developed and does not support yet all the features available in SDK 1.x such as https://github.com/aws/aws-sdk-java-v2/issues/36[Document APIs]
 
-The Quarkus extension supports two programming models:
+The Quarkus extension supports the DynamoDb client as well as the https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/dynamodb-enhanced-client.html[enhanced client].
+It supports two programming models:
 
 * Blocking access using URL Connection HTTP client (by default) or the Apache HTTP Client
 * https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/basics-async.html[Asynchronous programming] based on JDK's `CompletableFuture` objects and the Netty HTTP client.
@@ -300,9 +301,114 @@ public class FruitResource {
 
 The implementation is pretty straightforward and you just need to define your endpoints using the JAX-RS annotations and use the `FruitSyncService` to list/add new fruits.
 
+== DynamoDb enhanced client
+The DynamoDB enhanced client is part of the AWS SDK for Java version 2 and makes the mapping between DynamoDB Tables and Java beans very easy. The Enhanced Client
+requires a TableSchema, which can be generated with a set of annotations or declared in code. It is exists as sync and async variant.
+
+To use the enhanced client you additionally need to add `quarkus-amazon-dynamodb-enhanced` to your pom.xml.
+
+[source,xml]
+----
+<dependency>
+    <groupId>io.quarkiverse.amazonservices</groupId>
+    <artifactId>quarkus-amazon-dynamodb-enhanced</artifactId>
+</dependency>
+----
+
+The fruit bean would look like this.
+
+[source,java]
+----
+package org.acme.dynamodb;
+
+import io.quarkus.runtime.annotations.RegisterForReflection;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbBean;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbPartitionKey;
+
+@RegisterForReflection
+@DynamoDbBean
+public class Fruit {
+
+    private String name;
+    private String description;
+
+    @DynamoDbPartitionKey
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+}
+----
+
+TIP: `@RegisterForReflection` could also be removed because Quarkus automatically registers Beans annotated with `@DynamoDbBeans`.
+
+
+The FruitSyncService would need to use the DynamoDbEnhancedClient as well as create a TableSchema.
+
+[source,java]
+----
+package org.acme.dynamodb;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
+import javax.enterprise.context.ApplicationScoped;
+import javax.inject.Inject;
+
+import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
+import software.amazon.awssdk.enhanced.dynamodb.TableSchema;
+
+@ApplicationScoped
+public class FruitSyncService extends AbstractService {
+
+    private DynamoDbTable<Fruit> fruitTable;
+
+    @Inject
+    DynamoDbEnhancedClient dynamoEnhancedClient;
+
+    FruitSyncService() {
+        fruitTable = dynamoEnhancedClient.table(getTableName(),
+            TableSchema.fromClass(Fruit.class));
+    }
+
+    public List<Fruit> findAll() {
+        return exampleBlockingTable.scan().items().stream().collect(Collectors.toList());
+    }
+
+    public List<Fruit> add(Fruit fruit) {
+        fruitTable.putItem(fruit);
+        return findAll();
+    }
+
+    public Fruit get(String name) {
+        Key partitionKey = Key.builder().partitionValue(name).build();
+        return fruitTable.getItem(partitionKey);
+    }
+}
+----
+
+The FruitResource does not change.
+
+More information according to the DynamoDb enhanced client:
+
+* https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/examples-dynamodb-enhanced.html
+* https://aws.amazon.com/de/blogs/developer/introducing-enhanced-dynamodb-client-in-the-aws-sdk-for-java-v2/
+
 == Configuring DynamoDB clients
 
-Both DynamoDB clients (sync and async) are configurable via the `application.properties` file that can be provided in the `src/main/resources` directory.
+DynamoDB clients (sync and async) are configurable via the `application.properties` file that can be provided in the `src/main/resources` directory.
 Additionally, you need to add to the classpath a proper implementation of the sync client. By default the extension uses the `java.net.URLConnection` HTTP client, so
 you need to add a URL connection client dependency to the `pom.xml` file:
 
