--- a/docs/modules/ROOT/pages/includes/quarkus-amazon-cognitouserpools.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-amazon-cognitouserpools.adoc
@@ -29,6 +29,23 @@ endif::add-copy-button-to-env-var[]
 |
 
 
+a|icon:lock[title=Fixed at build time] [[quarkus-amazon-cognitouserpools_quarkus.cognito-user-pools.telemetry.enabled]]`link:#quarkus-amazon-cognitouserpools_quarkus.cognito-user-pools.telemetry.enabled[quarkus.cognito-user-pools.telemetry.enabled]`
+
+
+[.description]
+--
+OpenTelemetry AWS SDK instrumentation will be enabled if the OpenTelemetry extension is present and this value is true.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_COGNITO_USER_POOLS_TELEMETRY_ENABLED+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_COGNITO_USER_POOLS_TELEMETRY_ENABLED+++`
+endif::add-copy-button-to-env-var[]
+--|boolean 
+|`false`
+
+
 a|icon:lock[title=Fixed at build time] [[quarkus-amazon-cognitouserpools_quarkus.cognito-user-pools.sync-client.type]]`link:#quarkus-amazon-cognitouserpools_quarkus.cognito-user-pools.sync-client.type[quarkus.cognito-user-pools.sync-client.type]`
 
 
