--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -38,6 +38,7 @@
 * xref:amazon-ssooidc.adoc[SSOOIDC]
 * xref:amazon-sts.adoc[STS]
 * xref:amazon-textract.adoc[Textract]
+* xref:amazon-transfer.adoc[Transfer]
 * xref:dev-services.adoc[Dev Services for Amazon Services]
 * xref:opentelemetry.adoc[OpenTelemetry for Amazon Services]
 * xref:common-features.adoc[Common features]
